# optint

./: .gitignore  Distancias.csv  LICENSE  README.md  analysis_4_objectives.ipynb  cost_analysis.csv  debug.py  egresos.ipynb  egresos.py  iis.ilp  jp.txt  main.jl  main.py  main_por_cama.py  metricas.py  metricas_por_cama.py  metricas_rorro.py  metricas_validacion.py  metrics.py  mil_pacientes_2020.csv  model.py  out.sol  out_cama.sol  paciente.py  parameters.py  parametros.py  pesos.txt  pyproject.toml  pyproject.toml.dis  requirements.txt  resiliency.ipynb  rorro.py  sensitivity.ipynb  tempCodeRunnerFile.py  validacion.py  valores_objetivos.ipynb  viz.ipynb  xd.py
analysis/: cost_4_analysis.csv  egresos.ipynb  resiliency.ipynb  sensibility_and_costs.ipynb
analysis_4_blocks/: metrics_by_block_1_11_10_35.csv  metrics_by_block_1_11_10_41.csv  metrics_by_block_1_11_15_33.csv  metrics_by_block_1_11_30_37.csv  metrics_by_block_1_11_30_41.csv  metrics_by_block_1_1_10_30.csv  metrics_by_block_1_1_10_40.csv  metrics_by_block_1_1_15_35.csv  metrics_by_block_1_3_10_33.csv  metrics_by_block_1_3_10_37.csv  metrics_by_block_1_3_25_37.csv  metrics_by_block_1_5_10_31.csv  metrics_by_block_1_5_10_41.csv  metrics_by_block_1_5_15_31.csv  metrics_by_block_1_5_15_33.csv  metrics_by_block_1_5_15_35.csv  metrics_by_block_1_5_15_41.csv  metrics_by_block_1_5_20_31.csv  metrics_by_block_1_5_25_31.csv  metrics_by_block_1_5_25_35.csv  metrics_by_block_1_5_30_33.csv  metrics_by_block_1_5_30_35.csv  metrics_by_block_1_7_10_33.csv  metrics_by_block_1_7_10_35.csv  metrics_by_block_1_7_10_37.csv  (+12 more)
(+59 files in other folders)
