[tool.poetry]
name = "optint"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>, Ignacio Monardes <iamonardes@uc.cl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gurobipy = "^9.1.2"
pandas = "^1.2.4"
alive-progress = "^1.6.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
