[tool.poetry]
name = "optint"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>, Ignacio Monardes <iamonardes@uc.cl>", "José Pedro Vargas <josepvargasf@uc.cl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alive-progress = "^1.6.2"
numpy = "^1.20.3"
pandas = "^1.2.4"
tqdm = "^4.61.1"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
flake8 = "^3.9.2"
jupyterlab = "^3.0.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
